src/objects/DMSPM__SPM_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>DMSPM__Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read / Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMSPM__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMSPM__Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if the team member has their data displayed in SPM or whether they just have access to view the team&apos;s data in SPM.</description>
        <inlineHelpText>This indicates if the team member has their data displayed in SPM or whether they just have access to view the team&apos;s data in SPM.</inlineHelpText>
        <label>Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Team__c</fullName>
        <label>SPM Team</label>
        <referenceTo>DMSPM__SPM_Team__c</referenceTo>
        <relationshipName>SPM_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMSPM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPM_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dealmaker SPM Team Member</label>
    <nameField>
        <label>SPM Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker SPM Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>